# ego-mol-llm

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
data/: README.md
examples/: analyze_bile.py  analyze_pca.py  analyze_pca_msms.py  predict_one.py  run_dry_predict.py  write_12keto_pred.py
paper/: METHODS.md
src/ego_mol_llm/: __init__.py  batch.py  cli.py  draw.py  ego.py  graphml.py  mgf.py  paths.py  predict.py  prompts.py  report.py  ui_app.py  validate.py
src/ego_mol_llm/backends/: __init__.py  base.py  dry_run.py  factory.py  openai_compatible.py  transformers_backend.py
tests/: test_draw.py  test_graphml_and_dryrun.py  test_mgf.py  test_multimer_mass.py  test_parser_and_rescue.py  test_paths_and_batch.py
