[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ego-mol-llm"
version = "0.1.0"
description = "Blind structure prediction of unknown metabolites from MS/MS molecular-network ego neighborhoods using open chemistry LLMs (ChemDFM / Qwen)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Arome Science / contributors" },
]
keywords = [
  "metabolomics",
  "mass-spectrometry",
  "molecular-networking",
  "structure-elucidation",
  "chemistry-llm",
  "ChemDFM",
  "Qwen",
  "GraphML",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "networkx>=3.0",
  "rdkit>=2023.9.1; platform_system!='Windows' or python_version<'3.13'",
  "rich>=13.0",
  "pydantic>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
local = [
  "torch>=2.2",
  "transformers>=4.45",
  "accelerate>=0.33",
  "bitsandbytes>=0.43; platform_system=='Linux'",
]
api = [
  "openai>=1.40",
  "httpx>=0.27",
]
ui = [
  "gradio>=4.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ego-mol-llm = "ego_mol_llm.cli:app"

[project.urls]
Homepage = "https://github.com/arome-science/ego-mol-llm"
Documentation = "https://github.com/arome-science/ego-mol-llm#readme"
Issues = "https://github.com/arome-science/ego-mol-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ego_mol_llm"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/paper",
  "/README.md",
  "/LICENSE",
  "/CITATION.cff",
]

# src-layout package discovery
[tool.hatch.build.targets.wheel.force-include]
"src/ego_mol_llm" = "ego_mol_llm"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
